--- a/Documentation/html/Classes/SLControl.html
+++ b/Documentation/html/Classes/SLControl.html
@@ -140,7 +140,7 @@ Any components that should work on both iOS and OSX should subclass this class i
 							<li>
 	<span class="tooltip">
 		<code><a href="#//api/name/layoutViews">&ndash;&nbsp;layoutViews</a></code>
-		<span class="tooltip"><p>All subclasses should use this method to perform <a href="#//api/name/layout">layout</a> as this ensures iOS and OSX get updated correctly.</p></span>
+		<span class="tooltip"><p>All subclasses should use this method to perform layout as this ensures iOS and OSX get updated correctly.</p></span>
 	</span>
 	
 	
@@ -182,7 +182,7 @@ Any components that should work on both iOS and OSX should subclass this class i
 	
 	
 	<div class="method-subsection brief-description">
-		<p>All subclasses should use this method to perform <a href="#//api/name/layout">layout</a> as this ensures iOS and OSX get updated correctly.</p>
+		<p>All subclasses should use this method to perform layout as this ensures iOS and OSX get updated correctly.</p>
 	</div>		
 	
     
